compiler/tests/en/errors/bad_cast.salam
// EXPECT: E023
func main:
    s := "x"
    n := s as int
end
